fix(qa): grid layout causes overflowing of content

--- a/framework/core/less/common/root.less
+++ b/framework/core/less/common/root.less
@@ -116,4 +116,8 @@
   @media @tablet { --flarum-screen: tablet; }
   @media @desktop { --flarum-screen: desktop; }
   @media @desktop-hd { --flarum-screen: desktop-hd; }
+
+  @media @tablet { --container-width: @screen-tablet; }
+  @media @desktop { --container-width: @screen-desktop; }
+  @media @desktop-hd { --container-width: @screen-desktop-hd; }
 }
